# masters

./: .gitignore
src/: .gitignore  startup.sh  startup_img_seg.sh  startup_pc_seg.sh
src/bbox_custom_interface/: CMakeLists.txt  package.xml
src/bbox_custom_interface/msg/: BoundingBoxes3dCustom.msg  BoundingBoxesCustom.msg
src/img_segment/: package.xml  requirements.txt  setup.cfg  setup.py
src/img_segment/img_segment/: image_segment.py
src/img_segment/launch/: img_segment_launch.py
src/pointcloud_segment/: package.xml  setup.cfg  setup.py
src/pointcloud_segment/pointcloud_segment/: segment.py
src/pointcloud_segmentation/: package.xml  setup.cfg  setup.py
src/pointcloud_segmentation/pointcloud_segmentation/: segment.py
src/pointcloud_segmentation/pointcloud_segmentation/helper/: AbstractObject.py  Bottle.py  Chair.py  Dog.py  GetObject.py  Person.py  Umbrella.py  __init__.py
src/robot_interfaces/: CMakeLists.txt  package.xml
src/robot_interfaces/msg/: BoundingBox.msg
src/segmentation/: setup.py
